# rye_poetry_compare_habr

./: .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend_poetry/: Dockerfile  entrypoint.sh  entrypoint.test.sh  pyproject.toml  setup.cfg
backend_poetry/booking/admin/: __init__.py  booking.py
backend_poetry/booking/models/: booking.py
backend_poetry/booking/serializers/: booking.py
backend_poetry/booking/viewset/: __init__.py  booking_viewset.py
backend_poetry/config/: admin.py
backend_poetry/hotel/: apps.py  constant.py
backend_poetry/hotel/models/: __init__.py  hotel_suite.py
backend_poetry/hotel/serializers/: __init__.py
backend_poetry/tests/hotel/: factories.py
backend_poetry/users/admin/: user.py
backend_poetry/users/migrations/: 0001_initial.py
backend_poetry/users/serializers/: user.py
backend_rye/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
backend_rye/booking/: apps.py
backend_rye/booking/admin/: customer.py
backend_rye/booking/migrations/: 0001_initial.py
backend_rye/booking/models/: __init__.py  customer.py
backend_rye/config/: asgi.py  settings.py  urls.py
backend_rye/hotel/admin/: hotel_suite.py
backend_rye/tests/booking/: factories.py
backend_uv/: .coveragerc  Dockerfile  entrypoint.production.sh  entrypoint.sh  pyproject.toml
backend_uv/booking/migrations/: 0002_alter_customer_phone.py  0003_alter_customer_phone.py
backend_uv/booking/serializers/: __init__.py
backend_uv/config/: routers.py
backend_uv/hotel/admin/: __init__.py  hotel.py
backend_uv/hotel/migrations/: 0001_initial.py
backend_uv/hotel/models/: hotel.py
backend_uv/hotel/serializers/: hotel.py
backend_uv/hotel/viewset/: __init__.py  hotel_viewset.py
backend_uv/users/models/: user.py
backend_uv/users/viewsets/: user_viewset.py
(+1 files in other folders)
